--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,6 +303,7 @@ jobs:
           name: Merge to develop
           command: |
             git remote set-url origin https://$CIRCLE_PROJECT_USERNAME:$GITHUB_AUTH_SECRET@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+            git fetch origin
             git merge $CIRCLE_BRANCH origin/develop -m "ci(auto-merge): auto merge $CIRCLE_BRANCH
             
             [skip ci]"
@@ -325,10 +326,14 @@ workflows:
           requires:
             - npm-install
 
-      - git-merge-develop:
+      - Confirm merge:
+          type: approval
           requires:
             - test
             - build
+      - git-merge-develop:
+          requires:
+            - Confirm merge
   check: # Workflow ran on all branches except `main`, `develop` and `renovate/*`
     unless:
       or:
